app.css
body {
    margin: 0px;
    font-family: 'Montserrat', sans-serif;
    overflow-x: hidden;
    overflow-y: scroll;


}

.maincontent {
    z-index: -200;

}

.font {
    font-family: 'Palaquin', sans-serif;
    font-weight: 500;
}



.navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    /* padding-left: px; */
    padding-right: 64 px;
    margin-top: 30px;
    gap: 3px;
    width: 100%;



}

.navlinks {
    display: flex;
    flex-direction: row;
    justify-content: center;
    font-size: 16px;
    gap: 6em;





}

.links a {
    text-decoration: none;
    text-transform: capitalize;
    color: #6d6d6d;
}

.login a {
    text-decoration: none;
    color: #000000;
    text-transform: capitalize;
    font-size: 18px;



}



.introsection {
    display: flex;
    flex-direction: column;

    width: 880px;
    height: fit-content;
    justify-content: space-around;
    margin-left: 210px;
    margin-top: 100px;


    padding-right: 64px;
    padding-bottom: 96px;
    gap: 30px;


}

.text1 {
    color: #ff6452;
    font-size: 18px;

}

.mainheading {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;

    gap: 10px;

}

.hello {
    display: flex;

    flex-direction: column;
    justify-content: center;
    gap: 0px;
}


.heading {
    font-family: 'Palanquin', sans-serif;
    font-weight: 900;
    font-size: 96px;

    width: fit-content;
    height: 150px;


}



.heading .highlight {
    color: #ff6452;
    margin-right: 25px;


}


.heading2 {
    margin-top: -43px;
    z-index: -5;
}



.lildesc {
    color: #6d6d6d;
    font-size: 18px;

    width: 384px;
    height: 64px;


}

button {
    position: relative;
    display: inline-block;
    cursor: pointer;
    outline: none;
    border: 0;
    vertical-align: middle;
    text-decoration: none;
    background: transparent;
    padding: 0;
    font-size: inherit;
    font-family: inherit;
}

button.learn-more {
    width: 12rem;
    height: auto;
}

button.learn-more .circle {
    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
    position: relative;
    display: block;
    margin: 0;
    width: 3rem;
    height: 3rem;
    background: #ff6452;
    border-radius: 1.625rem;
}

button.learn-more .circle .icon {
    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
    position: absolute;
    top: 0;
    bottom: 0;
    margin: auto;
    background: #fff;
}

button.learn-more .circle .icon.arrow {
    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
    left: 0.625rem;
    width: 1.125rem;
    height: 0.125rem;
    background: none;
}

button.learn-more .circle .icon.arrow::before {
    position: absolute;
    content: "";
    top: -0.29rem;
    right: 0.0625rem;
    width: 0.625rem;
    height: 0.625rem;
    border-top: 0.125rem solid #fff;
    border-right: 0.125rem solid #fff;
    transform: rotate(45deg);
}

button.learn-more .button-text {
    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0.75rem 0;
    margin: 0 0 0 1.85rem;
    color: #282936;
    font-weight: 700;
    line-height: 1.6;
    text-align: center;
    text-transform: uppercase;
}

button:hover .circle {
    width: 100%;
}

button:hover .circle .icon.arrow {
    background: #fff;
    transform: translate(1rem, 0);
}

button:hover .button-text {
    color: #fff;
}

.points {

    display: flex;

    flex-direction: row;
    justify-content: flex-start;
    gap: 70px;

    width: fit-content;
}


.p1,
.p2,
.p3 {
    color: #6d6d6d;
    font-size: 16px;
    font-family: 'Montserrat',
        sans-serif;
    text-transform: capitalize;
}


.p1 span,
.p2 span,
.p3 span {
    font-family: 'Palanquin',
        sans-serif;
    font-size: 48px;
    font-weight: 900;
    display: block;
    color: #000000;
    width: fit-content;
    height: fit-content;
}


.mainimages {
    position: absolute;
    right: 150px;
    display: flex;
    flex-direction: column;

    top: 0px;
    z-index: -100;

    width: fit-content;



}

.shoe1 {
    z-index: 100;
    position: absolute;
    top: 150px;
    margin-left: 60px;
    margin-top: 40px;
    width: 610px;
    height: 502px;




}

.heading1 {
    z-index: 100;
    background-color: white;
    padding-right: 20px;
    padding-bottom: 20px;
}

.productsection {



    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;


    width: fit-content;

    gap: 28px;
    padding: 96px 214px;
    margin-right: 70px;


}



.introhead {

    font-size: 48px;
    font-weight: 700;

    height: fit-content;
    text-transform: capitalize;


}

.introhead span {
    color: #ff6452;
}

.lildesc2 {

    font-size: 16px;

    width: 512px;
    height: fit-content;
    color: #6d6d6d;
    padding: 0px;
}


.productcards {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;

    height: fit-content;
    gap: 80px;

}

.productimg {
    margin-bottom: 24px;
}

/* .product1 {
    display: flex;
    : 2px red solid;
    flex-direction: column;
    justify-content: flex-start;
    gap: 8px;


} */
.shoe {
    display: flex;

    flex-direction: column;
    justify-content: flex-start;
    gap: 8px;

}

.productrating {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    width: 100%;
}

.productrating span {
    font-size: 20px;
    color: #6d6d6d;
    margin-left: 5px;
}

.productrating img {
    margin-right: 5px;
    width: 22px;
    height: 22px;

}

.productname {
    font-family: 'palanquin', sans-serif;
    font-size: 24px;
    color: #000000;
    font-weight: 600;
}

.productprice {
    font-size: 24px;
    color: #ff6452;
    font-weight: 600;
}

.whatwedo {
    /* border: 2px solid black; */

    display: flex;
    flex-direction: row;
    flex: 1;
    justify-content: space-evenly;
    gap: 105px;
    margin-top: 247px;
    width: 100%;

}

.productimg2 {
    /* border: 2px solid black; */
    /* width: fit-content; */
    padding: 0px;
}

.lildesc3 {
    height: fit-content;
    display: flex;
    flex-direction: column;

    justify-content: flex-start;
    width: 700px;


}

.lildesc3 div {
    /* border: 2px solid red; */


}

.lildesc3 p {
    /* border: 2px solid black; */



}

.p4 {
    margin-top: -30px;
    width: 500px;
    height: fit-content;
    white-space: wrap;

}

.but2 {
    margin-top: 24px;
    width: fit-content;
}

.introhead span {
    margin-right: 10px;
}

